add portfolio.html file

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <title>Gab's Web</title>
 <link rel=stylesheet href="style.css">
     </head>
+    <link href="style.css">
 
     <body>
 <!-- Visible Html elements GO HERE-->
