--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
        
           </div> 
           <main>
-            <div class="section">
+            <div class="content">
           <h1>Portfolio</h1>
           <ul id="portfolio">
             <li><a href="projects/platformer/">Platformer : A cannon - dodging, collectible - grabbing adventure game for Halleb0t</a></li>
